[project]
name = "content-gen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.136.1",
    "greenlet>=3.4.0",
    "pydantic-settings>=2.14.0",
    "python-dotenv>=1.2.2",
    "rake-nltk>=1.0.6",
    "scikit-learn>=1.8.0",
    "sqlalchemy>=2.0.49",
    "tavily-python>=0.7.23",
    "uvicorn>=0.46.0",
]
